--- a/src/templates/log.html
+++ b/src/templates/log.html
@@ -3,6 +3,7 @@
 <head>
     <title>Button of Excellence</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="refresh" content="1">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
     <style>
       .container {
@@ -22,7 +23,5 @@
       </li>
     {% endfor %}
     </ul>
-
-    <!-- Add users form here! -->
 </body>
 </html>
