--- a/src/templates/users.html
+++ b/src/templates/users.html
@@ -4,17 +4,13 @@
     <title>Button of Excellence</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-    <style>
-      .container {
-        max-width: 1000px;
-      }
-    </style>
     <script>
       function newUser() {
         var xhr = new XMLHttpRequest();
         console.log("Starting to create new user!")
         var name = document.getElementById("uname").value;
-        xhr.open('POST', "{{host_url}}/users?name=" + name, true);
+        var type = document.getElementById("user-type").value;
+        xhr.open('POST', "http://localhost:5000/users?name=" + name + "&type=" + type, true);
         xhr.send();
         console.log("New user created. Reloading")
         location.reload();
@@ -23,7 +19,7 @@
       {% if testing %}
         function postButtonPress(id) {
           var xhr = new XMLHttpRequest();
-          xhr.open('GET', "{{host_url}}/button?id=" + id, true);
+          xhr.open('GET', "/button?id=" + id, true);
           xhr.send();
         }
       {% endif %}
@@ -33,15 +29,17 @@
     <ul id="users">
     {% for user in users %}
         <li>
-          <ul id="user">
+          <ul>
+            {% if testing%}
+            <li>
+              <button onClick=postButtonPress({{user.id}})>
+                Test {{user.username}}!
+              </button>
+            </li>
+            {% else %}
             <li>ID: {{user.id}}</li>
             <li>Name: {{user.username}}</li>
-            {% if testing%}
-              <li>
-                <button onClick=postButtonPress({{user.id}})>
-                  Test me!
-                </button>
-              </li>
+            <li>Type: {{user.type.name}}</li>
             {% endif %}
           </ul>
           <br>
@@ -49,11 +47,15 @@
     {% endfor %}
     </ul>
 
-    <form name="myform">
+    <form name="new-user-form">
       <p>ENTER USER NAME <input id="uname" type="text" name="username"></p>
-      <button onclick= newUser()>
-        Create new user
-      </button>
+      <select id="user-type">
+        <option value="1" selected="true">Student</option>
+        <option value="2">Teacher</option>
+      </select>
     </form>
+    <button onclick= newUser()>
+      Create new user
+    </button>
 </body>
 </html>
