Added basic session functionality

--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -13,6 +13,24 @@
   <body>
     <div class="container">
       Hello!
+      <p>
+        <a href="/users">Users</a>
+      </p>
+      <p>
+        <a href="/groups">Groups</a>
+      </p>
+      <p>
+        <a href="/contexts">Contexts</a>
+      </p>
+      <p>
+        <a href="/sessions">Sessions</a>
+      </p>
+      <p>
+        <a href="/log">Activity log</a>
+      </p>
+      <p>
+        <a href="/users/test">Users testing</a>
+      </p>
     </div>
   </body>
 </html>
