--- a/src/templates/context.html
+++ b/src/templates/context.html
@@ -1,15 +1,9 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <title>Button of Excellence</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-</head>
-<body>
+{% extends "base.html" %}
+
+{% block content %}
   <ul>
     <li>ID: {{context.id}}</li>
     <li>Name: {{context.name}}</li>
     <!-- TODO: List all context rules -->
   </ul>
-</body>
-</html>
+{% endblock %}
