--- a/src/templates/contexts.html
+++ b/src/templates/contexts.html
@@ -1,11 +1,6 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <title>Button of Excellence</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-</head>
-<body>
+{% extends "base.html" %}
+
+{% block content %}
     <a href="/contexts/new">Create new context</a>
     <ul id="contexts">
     {% for context in contexts %}
@@ -18,5 +13,4 @@
       </li>
     {% endfor %}
     </ul>
-</body>
-</html>
+{% endblock %}
