--- a/src/templates/log.html
+++ b/src/templates/log.html
@@ -1,17 +1,6 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <title>Button of Excellence</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="refresh" content="1">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-    <style>
-      .container {
-        max-width: 1000px;
-      }
-    </style>
-</head>
-<body>
+{% extends "base.html" %}
+
+{% block content %}
     <ul id="logs">
     {% for entry in entries %}
         <li>
@@ -23,5 +12,4 @@
       </li>
     {% endfor %}
     </ul>
-</body>
-</html>
+{% endblock %}
