--- a/src/templates/users.html
+++ b/src/templates/users.html
@@ -1,10 +1,6 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <title>Button of Excellence</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-    <script>
+{% extends "base.html" %}
+
+{% block scripts %}
       function newUser() {
         var xhr = new XMLHttpRequest();
         console.log("Starting to create new user!")
@@ -23,9 +19,9 @@
           xhr.send();
         }
       {% endif %}
-    </script>
-</head>
-<body>
+{% endblock %}
+
+{% block content %}
     <ul id="users">
     {% for user in users %}
         <li>
@@ -57,5 +53,4 @@
     <button onclick= newUser()>
       Create new user
     </button>
-</body>
-</html>
+{% endblock %}
