--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -6,8 +6,6 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="stylesheet" href="https://bootswatch.com/4/minty/bootstrap.css">
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.1/css/all.css" integrity="sha384-5sAR7xN1Nv6T6+dT2mhtzEpVJvfS3NScPQTrOxhwjIuvcA67KV2R5Jz6kr4abQsz" crossorigin="anonymous">
-    <!-- <link rel="stylesheet" href="https://bootswatch.com/4/minty/bootstrap.css"> -->
     <style>
       .navbar-nav > li{
         padding-left: 1rem;
@@ -21,63 +19,21 @@
         margin-bottom: 0rem !important;
         margin-right: 1rem !important;
       }
-      .col-md-7 {
+      .col-5 {
         padding-right: 0px;
         padding-left: 0px;
       }
-      .card-link {
-        position: absolute;
-        top: 0; left: 0;
-        height: 100%; width: 100%;
+      .hidden {
+        display:none;
       }
-      .card-body {
-        margin-top: 2rem;
-      }
-
-      .add-session {
-        background: none;
-        margin: 1rem;
-        position: fixed;
-        bottom: 0;
-        right: 0;
-        width: 370px;
-        height: 370px;
-        z-index: 100;
-        display: none;
-        text-decoration: none;
-        color: #ffffff;
-        background-color: #ff9000;
-      }
-
-      .add-session i {
-        font-size: 160px;
-      }
+      body { font-size: 200%; }
     </style>
     <script type="text/javascript">
-      jQuery(document).ready(function() {
-        var offset = 250;
-        var duration = 300;
-        jQuery(window).scroll(function() {
-          if (jQuery(this).scrollTop() > offset) {
-            jQuery(‘.add-session’).fadeIn(duration);
-          } else {
-            jQuery(‘.add-session’).fadeOut(duration);
-          }
-        });
-
-        jQuery(‘.add-session’).click(function(event) {
-          event.preventDefault();
-          jQuery(‘html, body’).animate({scrollTop: 0}, duration);
-          return false;
-        })
-      });
-
       {% block scripts %}
       {% endblock %}
     </script>
   </head>
   <body>
-    <div>
     <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarColor01" aria-controls="navbarColor01" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -94,11 +50,8 @@
         </ul>
       </div>
     </nav>
-      <div class="container">
-        {% block content %}
-        {% endblock %}
-      </div>
-    </div>
+    {% block content %}
+    {% endblock %}
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
