WIP Fixed some sessions view stuff

--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -23,8 +23,18 @@
         padding-right: 0px;
         padding-left: 0px;
       }
+      .card {
+        border-color: #FF851B
+      }
       .hidden {
         display:none;
+      }
+      .button-orng {
+        background-color: #FF851B;
+        border-color: #FF851B;
+      }
+      .card-link {
+        color: #FF851B;
       }
       body { font-size: 200%; }
     </style>
@@ -34,7 +44,7 @@
     </script>
   </head>
   <body>
-    <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
+    <nav class="navbar navbar-expand-lg navbar-dark button-orng">
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarColor01" aria-controls="navbarColor01" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
