WIP Improved single session view

--- a/src/templates/session.html
+++ b/src/templates/session.html
@@ -14,16 +14,35 @@
         xhr.open('PUT', '/sessions/{{id}}', true);
         xhr.send();
       }
+
+      function doReload() {
+        console.log("Reloading!")
+        window.location.reload()
+      }
+
+      function reload() {
+        // TODO: Do this only when new entries arrive?
+        console.log("Waiting for reload")
+        setTimeout(doReload, 1000)
+      }
+
+      window.onload = reload
 {% endblock %}
 
 {% block content %}
-    <button onclick="endSession()">
+    <button onclick="endSession()" class="btn btn-danger btn-lg" style="position:absolute; top: 6rem; left: 1rem">
       End session
     </button>
-    <ol id="session">
-    {% for user in users %}
-        <li>{{user.username}}
-      </li>
-    {% endfor %}
-    </ol>
+  <div class="container">
+    <div class="row">
+      <div class="col">
+        <ul id="session" class="list-group row" style="margin-top: 1rem;">
+        {% for user in users %}
+            <li class="list-group-item col-4">{{user.username}}</li>
+        {% endfor %}
+        </ul>
+        <h1 class="col-3 offset-8" style="position: absolute; text-align: right; top: 20rem; font-size: 12rem; color: #FF851B;">{{fill}}%</h1>
+      </div>
+    </div>
+  </div>
 {% endblock %}
