WIP: Hack to enable anonymous answers

--- a/src/templates/session.html
+++ b/src/templates/session.html
@@ -30,6 +30,7 @@
 {% endblock %}
 
 {% block content %}
+    <h1 style="text-align: center;">{{description}}</h1>
     <button onclick="endSession()" class="btn btn-danger btn-lg" style="position:absolute; top: 6rem; left: 1rem">
       End session
     </button>
