WIP: Translated to Estonian

--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -51,12 +51,12 @@
 
       <div class="collapse navbar-collapse" id="navbarColor01">
         <ul class="navbar-nav mr-auto">
-          {{ nav_link('list_sessions', 'Sessions') }}
-          {{ nav_link('list_contexts', 'Contexts') }}
-          {{ nav_link('list_users', 'Users') }}
-          {{ nav_link('list_groups', 'Groups') }}
-          {{ nav_link('test_users', 'Testing') }}
-          {{ nav_link('view_log', 'Activity log') }}
+          {{ nav_link('list_sessions', 'Sessioonid') }}
+          {{ nav_link('list_contexts', 'Küsimuste kontekstid', True) }}
+          {{ nav_link('list_users', 'Kasutajad') }}
+          {{ nav_link('list_groups', 'Grupid') }}
+          {{ nav_link('test_users', 'Testing', True) }}
+          {{ nav_link('view_log', 'Tegevus logi', True) }}
         </ul>
       </div>
     </nav>
