--- a/src/templates/session.html
+++ b/src/templates/session.html
@@ -32,7 +32,7 @@
 {% block content %}
     <h1 style="text-align: center;">{{description}}</h1>
     <button onclick="endSession()" class="btn btn-danger btn-lg" style="position:absolute; top: 6rem; left: 1rem">
-      End session
+      Lõpeta sessioon
     </button>
   <div class="container">
     <div class="row">
