WIP: Added locale time formatting and simple statistics

--- a/src/templates/log.html
+++ b/src/templates/log.html
@@ -6,7 +6,7 @@
         <li>
           <ul>
             <li>User: {{entry.user.username}}</li>
-            <li>Time: {{entry.time}}</li>
+            <li>Time: {{ momentjs(entry.time).format('LLLL') }}</li>
           </ul>
           <br>
       </li>
