--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -36,15 +36,16 @@
       .card-link {
         color: #FF851B;
       }
-      body { font-size: 200%; }
     </style>
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <script type="text/javascript" src="https://momentjs.com/downloads/moment-with-locales.js"></script>
     <script type="text/javascript">
       {% block scripts %}
       {% endblock %}
     </script>
   </head>
   <body>
-    <nav class="navbar navbar-expand-lg navbar-dark button-orng">
+    <nav class="navbar navbar-expand-lg navbar-dark button-orng" style="font-size: 200%;">
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarColor01" aria-controls="navbarColor01" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -57,12 +58,12 @@
           {{ nav_link('list_groups', 'Grupid') }}
           {{ nav_link('test_users', 'Testing', True) }}
           {{ nav_link('view_log', 'Tegevus logi', True) }}
+          {{ nav_link('statistics', 'Statistika') }}
         </ul>
       </div>
     </nav>
     {% block content %}
     {% endblock %}
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
   </body>
