--- a/src/templates/new_session.html
+++ b/src/templates/new_session.html
@@ -31,7 +31,7 @@
 
 {% block content %}
   <div class="container">
-    <div class="row hidden jumbotron" id="new-session-form-group";>
+    <div class="row jumbotron" id="new-session-form-group";>
       <form>
         <div class="form-group">
           <label>Grupp</label>
