WIP Sessions list, more progress, testing html3

--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -36,12 +36,12 @@
       .card-link {
         color: #FF851B;
       }
-      .session-row :nth-child(even){
+      .session-list :nth-child(even){
         background-color: #dcdcdc;
       }
-      .session-row :nth-child(odd){
+      /*.session-row :nth-child(odd){
         background-color: #aaaaaa;
-      }
+      }*/
     </style>
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script type="text/javascript" src="https://momentjs.com/downloads/moment-with-locales.js"></script>
