WIP Sessions list, more progress, testing html4

--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -36,7 +36,10 @@
       .card-link {
         color: #FF851B;
       }
-      .session-list :nth-child(even){
+      .session-list {
+        margin: 0 auto;
+      }
+      .session-list :nth-of-type(even){
         background-color: #dcdcdc;
       }
       /*.session-row :nth-child(odd){
