--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -39,7 +39,7 @@
       .session-list {
         margin: 0 auto;
       }
-      .session-list :nth-of-type(even){
+      .session-row:nth-of-type(even) {
         background-color: #dcdcdc;
       }
       /*.session-row :nth-child(odd){
