WIP Sessions list, more progress, testing html7

--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -36,11 +36,28 @@
       .card-link {
         color: #FF851B;
       }
+
       .session-list {
         margin: 0 auto;
       }
-      .session-row:nth-of-type(even) {
+
+      .session-header {
         background-color: #dcdcdc;
+        border-style: dashed;
+        font-weight: bold;
+      }
+
+      .osalus {
+        text-align: right;
+      }
+
+      .session-date {
+        text-align: right;
+      }
+
+      .session-row:nth-of-type(odd) {
+        background-color: #dcdcdc;
+        color: black;
       }
       /*.session-row :nth-child(odd){
         background-color: #aaaaaa;
