WIP Sessions creation

--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="stylesheet" href="https://bootswatch.com/4/minty/bootstrap.css">
     <style>
-      .navbar-nav > li{
+      .navbar-nav > li {
         padding-left: 1rem;
         padding-right: 1rem;
       }
@@ -39,11 +39,13 @@
 
       .session-list {
         margin: 0 auto;
+        color: black;
       }
 
       .session-header {
         background-color: #dcdcdc;
-        border-style: dashed;
+        border-bottom-style: solid;
+        border-color: black;
         font-weight: bold;
       }
 
@@ -57,11 +59,10 @@
 
       .session-row:nth-of-type(odd) {
         background-color: #dcdcdc;
-        color: black;
       }
-      /*.session-row :nth-child(odd){
-        background-color: #aaaaaa;
-      }*/
+      .create-session-form {
+        margin-top: 2rem;
+      }
     </style>
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script type="text/javascript" src="https://momentjs.com/downloads/moment-with-locales.js"></script>
