WIP Sessions creation, fixed url

--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -43,6 +43,7 @@
       }
 
       .session-header {
+        margin-top: 2rem;
         background-color: #dcdcdc;
         border-bottom-style: solid;
         border-color: black;
