--- a/src/templates/session.html
+++ b/src/templates/session.html
@@ -11,7 +11,7 @@
           }
         }
 
-        xhr.open('PUT', '/sessions/{{id}}', true);
+        xhr.open('PUT', '/api/v1/sessions/{{id}}', true);
         xhr.send();
       }
 
