--- a/src/templates/new_session.html
+++ b/src/templates/new_session.html
@@ -15,7 +15,7 @@
         var e = document.getElementById("context-select");
         var contextId = e.options[e.selectedIndex].value
 
-        xhr.open('POST', 'api/v1/sessions', true);
+        xhr.open('POST', '/api/v1/sessions', true);
         xhr.setRequestHeader('Accept', 'application/json');
         xhr.setRequestHeader('Content-Type', 'application/json');
         xhr.send(JSON.stringify({
