WIP Sessions viewing

--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -42,6 +42,10 @@
         color: black;
       }
 
+      a {
+         text-decoration: none;
+      }
+
       .session-header {
         margin-top: 2rem;
         background-color: #dcdcdc;
