--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -46,6 +46,22 @@
          text-decoration: none;
       }
 
+      a:link {
+        color: black;
+      }
+
+      a:visited {
+        color: black;
+      }
+
+      a:hover {
+        color: black;
+      }
+
+      a:active {
+        color: black;
+      }
+
       .session-header {
         margin-top: 2rem;
         background-color: #dcdcdc;
