WIP Session viewing update 2

--- a/src/templates/session.html
+++ b/src/templates/session.html
@@ -43,7 +43,7 @@
               <li class="list-group-item col-4">{{user.username}}</li>
           {% endfor %}
           </ul>
-          <h1 class="col-3 offset-8" style="position: absolute; text-align: right; top: 20rem; font-size: 12rem; color: #FF851B;">{{fill}}%</h1>
+          <h1 class="col-3 offset-8" style="position: absolute; text-align: right; margin-right: 2rem; top: 16rem; font-size: 10rem; color: #FF851B;">{{fill}}%</h1>
         </div>
       </div>
     </div>
