--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -42,23 +42,23 @@
         color: black;
       }
 
-      a {
+      .session-list a {
          text-decoration: none;
       }
 
-      a:link {
+      .session-list a:link {
         color: black;
       }
 
-      a:visited {
+      .session-list a:visited {
         color: black;
       }
 
-      a:hover {
+      .session-list a:hover {
         color: black;
       }
 
-      a:active {
+      .session-list a:active {
         color: black;
       }
 
