WIP README update, formatting

--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -113,7 +113,7 @@
           {{ nav_link('contexts_list', 'Küsimuste kontekstid', True) }}
           {{ nav_link('users_list', 'Kasutajad') }}
           {{ nav_link('groups_list', 'Grupid') }}
-          {{ nav_link('users_testing', 'Testing', True) }}
+          {{ nav_link('users_testing', 'Testing') }}
           {{ nav_link('log_viewer', 'Tegevus logi', True) }}
           {{ nav_link('statistics', 'Statistika') }}
         </ul>
