--- a/src/templates/users.html
+++ b/src/templates/users.html
@@ -2,14 +2,16 @@
 
 {% block scripts %}
       function newUser() {
-        var xhr = new XMLHttpRequest();
         console.log("Starting to create new user!")
         var name = document.getElementById("uname").value;
         var type = document.getElementById("user-type").value;
-        xhr.open('POST', "/api/v1/users?name=" + name + "&type=" + type, true);
-        xhr.send();
-        console.log("New user created. Reloading")
-        location.reload();
+        fetch("/api/v1/users?name=" + name + "&type=" + type, {
+          method: "POST"
+        }).then(response => {
+          console.log(response.text()); // TODO: Debug logging, remove!
+          console.log("New user created. Reloading"); // TODO: Debug logging, remove!
+          location.reload();
+        })
       }
 
       {% if testing %}
